tests/paczka1/small_fuzzy/79741613.err
Error in line 4: eL4mWocL4Eb S358 5,4
Error in line 3: FdG S518 44,5
